UPDATE#6 Fix Swagger and Bug Post Pollygon
